Fixed horizontal jumping. Vertical still to go

--- a/static/css/kamu.less
+++ b/static/css/kamu.less
@@ -29,6 +29,7 @@
 
 body {
     background-color: @body-background-color;
+    overflow-y: scroll; // Always scroll so that we don't get horizontal jumping
 }
 
 img {
